Update to Heritrix 3.10.0